<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.passwordbaru.PasswordbaruActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:text="Ubah Password"
            android:textSize="@dimen/_16sdp"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_70sdp"
            android:textColor="@color/teal_700"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:passwordToggleEnabled="true"
                app:startIconContentDescription="@string/content_description_end_icon"
                app:startIconDrawable="@drawable/ic_lock_black_24dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_ubahtextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:passwordToggleEnabled="true"
                app:startIconContentDescription="@string/content_description_end_icon"
                app:startIconDrawable="@drawable/ic_lock_black_24dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_ubahkonfirmasiPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_password_konfirmasi"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="16" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_passworbaru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:backgroundTint="@color/teal_700"
                android:text="Kirim"
                android:fontFamily="@font/quicksand_medium"
                android:textAllCaps="false"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>