<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/background_stroke_teal"
        android:elevation="@dimen/_4sdp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_baseline_kembali"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_medium"
                android:text="Title"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                tools:ignore="HardcodedText" />

        </RelativeLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_weight="1"
        android:background="@drawable/bg_gradasi"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_23sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/quicksand_bold"
            android:text="Login"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/hitampudar"
            android:textSize="@dimen/_20sdp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_23sdp"
            android:fontFamily="@font/quicksand_bold"
            android:text="Masukkan telp dan kata sandimu"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/hitampudar"
            android:textSize="@dimen/_10sdp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconContentDescription="@string/content_description_end_icon"
                app:startIconDrawable="@drawable/ic_baseline_email_24">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_telp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_telp"
                    android:inputType="textEmailAddress"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:passwordToggleEnabled="true"
                app:startIconContentDescription="@string/content_description_end_icon"
                app:startIconDrawable="@drawable/ic_lock_black_24dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="16" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Belum Punya akun??"/>

                <TextView
                    android:id="@+id/txtlupapassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="end"
                    android:text="Lupa Password??"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/Labeldaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:text="Daftar," />

                <TextView
                    android:id="@+id/text_viewRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/Labeldaftar"
                    android:text="Klik Disini"
                    android:textColor="@color/colorAccent" />
            </RelativeLayout>

<!--            <Button-->
<!--                android:id="@+id/btnLogin"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="@dimen/_30sdp"-->
<!--                android:background="@drawable/bg_gradasiatasabawah"-->
<!--                android:text="Login"-->
<!--                android:textColor="@color/white"-->
<!--                app:backgroundTint="@color/colorAccent" />-->




        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Your other layout elements -->

            <RelativeLayout
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:backgroundTint="@color/colorAccent"
                android:background="@drawable/bg_gradasiatasabawah"
                android:layout_alignParentBottom="true"
                android:padding="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    tools:ignore="HardcodedText" />

            </RelativeLayout>
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>