<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:elevation="@dimen/_4sdp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_baseline_kembali"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_medium"
                android:text="Title"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                tools:ignore="HardcodedText" />

        </RelativeLayout>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_100sdp"
            android:fontFamily="@font/quicksand_bold"
            android:text="Register"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/hitampudar"
            android:textSize="@dimen/_20sdp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/quicksand_bold"
            android:text="Silakan lakukan pendaftaran"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/hitampudar"
            android:textSize="@dimen/_10sdp"
            tools:ignore="MissingConstraints" />
    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconContentDescription="@string/content_description_end_icon"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_nama"
                android:maxLength="18"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/txvphone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/bg_btn_lapisanabu">

            <ImageView
                android:id="@+id/imvphone"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_13sdp"
                android:src="@drawable/ic_baseline_phone_24"
                app:tint="@color/Abuabuhitam" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imvphone"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_1sdp"
                    android:gravity="center"
                    android:text="+62"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edt_telp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginEnd="3dp"
                    android:layout_toEndOf="@+id/imvphone"
                    android:background="@color/white"
                    android:hint="No Telpone"
                    android:inputType="number"
                    android:maxLength="13"
                    android:textSize="@dimen/_11sdp" />

            </LinearLayout>

        </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="true"
            app:startIconContentDescription="@string/content_description_end_icon"
            app:startIconDrawable="@drawable/ic_lock_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_password"
                android:inputType="textPassword"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="5dp"-->
<!--            app:counterEnabled="true"-->
<!--            app:counterMaxLength="16"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:passwordToggleEnabled="true"-->
<!--            app:startIconContentDescription="@string/content_description_end_icon"-->
<!--            app:startIconDrawable="@drawable/ic_lock_black_24dp">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/edit_Passwordconfirm"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/masukkan_password_konfirmasi"-->
<!--                android:inputType="textPassword"-->
<!--                android:lines="1" />-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>


    </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Your other layout elements -->

        <RelativeLayout
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:backgroundTint="@color/colorAccent"
            android:background="@drawable/bg_gradasiatasabawah"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/_8sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_medium"
                android:text="Register"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                tools:ignore="HardcodedText" />

        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>